[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://main_esce.gd" type="Script" id=3]
[ext_resource path="res://imagenes/mago1.png" type="Texture" id=4]
[ext_resource path="res://imagenes/mago2.png" type="Texture" id=5]
[ext_resource path="res://imagenes/suelo.jpg" type="Texture" id=6]
[ext_resource path="res://fondo.gd" type="Script" id=7]
[ext_resource path="res://imagenes/game.png" type="Texture" id=8]
[ext_resource path="res://imagenes/win.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="main_esce" type="Node2D"]
script = ExtResource( 3 )

[node name="fondo" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="fondo"]
texture = ExtResource( 6 )
centered = false

[node name="Sprite2" type="Sprite" parent="fondo"]
texture = ExtResource( 6 )
centered = false
offset = Vector2( 0, -600 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 511, 499 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]
visible = false
texture = ExtResource( 1 )

[node name="Sprite2" type="AnimatedSprite" parent="player"]
position = Vector2( 3, 1.5 )
scale = Vector2( 1.30769, 1.5 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="tgo" type="Timer" parent="player"]
one_shot = true

[node name="tpue" type="Timer" parent="."]
wait_time = 2.5

[node name="go" type="Sprite" parent="."]
visible = false
position = Vector2( 517, 247 )
texture = ExtResource( 8 )

[node name="win" type="Sprite" parent="."]
visible = false
position = Vector2( 517, 247 )
texture = ExtResource( 9 )

[node name="hub" type="Node2D" parent="."]

[node name="der" type="TextureButton" parent="hub"]
margin_left = 544.0
margin_top = -13.0
margin_right = 584.0
margin_bottom = 27.0
rect_scale = Vector2( 12.5504, 15.7995 )

[node name="izq" type="TextureButton" parent="hub"]
margin_left = -22.0
margin_top = -10.0
margin_right = 18.0
margin_bottom = 30.0
rect_scale = Vector2( 12.5504, 15.7995 )

[node name="cont" type="Node2D" parent="hub"]
position = Vector2( 49, 38 )
scale = Vector2( 3, 2.2 )

[node name="Label" type="Label" parent="hub/cont"]
margin_right = 40.0
margin_bottom = 14.0

[node name="twin" type="Timer" parent="hub/cont"]

[connection signal="timeout" from="player/tgo" to="player" method="_on_tgo_timeout"]
[connection signal="timeout" from="tpue" to="." method="_on_tpue_timeout"]
[connection signal="timeout" from="hub/cont/twin" to="." method="_on_twin_timeout"]
